--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
-	"id": "obsidian-sample-plugin",
+	"id": "dndreferencesheet",
 	"name": "Sample Plugin",
-	"version": "1.0.1",
+	"version": "0.0.1",
 	"minAppVersion": "0.12.0",
-	"description": "This is a sample plugin for Obsidian. This plugin demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
+	"description": "This plugins is a reference sheet for Dms for the popular roleplaying game of DND",
+	"author": "Daniel Stirba",
 	"authorUrl": "https://obsidian.md",
 	"isDesktopOnly": false
 }
